rhoi'r cyfan o fewn API CherryPy

--- a/online-api/gunicorn.conf
+++ b/online-api/gunicorn.conf
@@ -3,10 +3,10 @@ import multiprocessing
 
 bind = "0.0.0.0:8008"
 
-pythonpath = "/opt/adapt-online-api"
-pidfile = "/tmp/gunicorn_adapt.pid"
-errorlog = "/opt/adapt-online-api/adapt-api.log"
-chdir = "/opt/adapt-online-api"
+pythonpath = "/opt/skills-online-api"
+pidfile = "/tmp/gunicorn_skillsapi.pid"
+errorlog = "/opt/skills-online-api/skills-api.log"
+chdir = "/opt/skills-online-api"
 
 max_requests = 1000
 workers = 1 #multiprocessing.cpu_count() * 2 + 1
