--- a/Dockerfile.online-api
+++ b/Dockerfile.online-api
@@ -1,25 +1,55 @@
 FROM ubuntu:16.04
+MAINTAINER Uned Technolegau Iaith, Prifysgol Bangor University
 
 RUN apt-get update \
  && apt-get install -y \
 	git supervisor python3 python3-pip python3-dev \
+        cmake wget curl locales vim zip zlib1g-dev \
  && pip3 install --upgrade pip
 
-RUN pip3 install -e git+https://github.com/mycroftai/adapt#egg=adapt-parser
 
-RUN mkdir /opt/adapt-online-api
+# Set the locale
+RUN locale-gen cy_GB.UTF-8
+ENV LANG cy_GB.UTF-8  
+ENV LANGUAGE cy_GB:en  
+ENV LC_ALL cy_GB.UTF-8
 
-ADD online-api /opt/adapt-online-api
+
+# Gosod padatious / Install Padartious
+RUN mkdir -p /opt/FaNN \
+  && cd /opt/FaNN \
+  && wget http://downloads.sourceforge.net/project/fann/fann/2.2.0/FANN-2.2.0-Source.zip \
+  && unzip FANN-2.2.0-Source.zip \
+  && cd FANN-2.2.0-Source/ \
+  && cmake . \
+  && make install \
+  && apt-get install -q -y libfann-dev swig \
+  && pip3 install padatious \
+  && rm -rf /var/lib/apt/lists/*
+
+
+# Skills
+RUN pip3 install pyowm feedparser
+
+RUN mkdir -p /opt/skills-online-api
+WORKDIR /opt/skills-online-api
+ADD online-api /opt/skills-online-api
 ADD online-api/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
-
-WORKDIR /opt/adapt-online-api
-
 RUN pip3 install -r requirements.txt 
+ENV PYTHONPATH="${PYTHONPATH}:/opt/skills-online-api/assistant"
 
 RUN mkdir -p /var/log/gunicorn \
- && touch /var/log/gunicorn/adapt-online-api.error.log
+ && touch /var/log/gunicorn/skills-online-api.error.log
+
+
+# estyn data defnyddiol ar gyfer rhai sgiliau / 
+# fetch some useful data for some of the skills.
+RUN mkdir -p /data
+WORKDIR /data
+RUN wget http://techiaith.cymru/enwaulleoedd/EnwauCymru/EnwauCymru.txt
+
+WORKDIR /opt/skills-online-api
 
 EXPOSE 8008
-
 CMD ["/usr/bin/supervisord"]
 
