--- a/online-api/supervisord.conf
+++ b/online-api/supervisord.conf
@@ -1,6 +1,6 @@
 [supervisord]
 nodaemon=true
 
-[program:maryttsapi]
-command=gunicorn wsgi --config /opt/adapt-online-api/gunicorn.conf --chdir=/opt/adapt-online-api
+[program:skillsapi]
+command=gunicorn wsgi --config /opt/skills-online-api/gunicorn.conf --chdir=/opt/skills-online-api
 
