--- a/Dockerfile.online-api
+++ b/Dockerfile.online-api
@@ -29,7 +29,7 @@ RUN mkdir -p /opt/FaNN \
 
 
 # Skills
-RUN pip3 install pyowm feedparser jsonpickle
+RUN pip3 install pyowm feedparser jsonpickle python-dateutil
 
 RUN mkdir -p /opt/skills-online-api
 WORKDIR /opt/skills-online-api
