cywiro gwallau amherthnasol i wicipedia

--- a/Dockerfile.online-api
+++ b/Dockerfile.online-api
@@ -6,7 +6,7 @@ RUN apt-get update \
 	git supervisor python3 python3-pip python3-dev \
         cmake wget curl locales vim zip zlib1g-dev \
         rabbitmq-server \
- && pip3 install --upgrade pip
+ && pip3 install --upgrade pip setuptools
 
 
 # Set the locale
@@ -17,11 +17,9 @@ ENV LC_ALL cy_GB.UTF-8
 
 
 # Gosod padatious / Install Padartious
-RUN mkdir -p /opt/FaNN \
+RUN cd /opt && git clone https://github.com/libfann/fann.git FaNN \
   && cd /opt/FaNN \
-  && wget http://downloads.sourceforge.net/project/fann/fann/2.2.0/FANN-2.2.0-Source.zip \
-  && unzip FANN-2.2.0-Source.zip \
-  && cd FANN-2.2.0-Source/ \
+  && git checkout tags/2.2.0 \
   && cmake . \
   && make install \
   && apt-get install -q -y libfann-dev swig \
@@ -40,6 +38,7 @@ ADD online-api /opt/skills-online-api
 WORKDIR /opt/skills-online-api
 RUN pip3 install -r requirements.txt 
 ENV PYTHONPATH="${PYTHONPATH}:/opt/skills-online-api/assistant"
+
 
 RUN mkdir -p /var/log/gunicorn \
     && mkdir -p /var/log/celery \
