gwella strwythur a sgil Clic S4C. Better structure and S4C Click skill

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@ apikey.py
 cysill_arlein_apikey.py
 mysql
 recordings
-online-api/assistant/*_cache
+*_cache
+server/assistant/*_cache
 data
+log
+log*
