--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,29 +1,20 @@
-FROM ubuntu:16.04
+FROM ubuntu:18.04
 MAINTAINER Uned Technolegau Iaith, Prifysgol Bangor University
 
-# Setup Linux base environment
-RUN apt-get update \ 
-    && apt-get install -q -y \
-	libtext-ngrams-perl \
-        git \
-	cmake \
-        locales \
-	python3 \ 
-	python3-pip \
-	python3-dev \
-        mysql-client \
-	perl \
-        wget \
-	curl \
-	zlib1g-dev \
-	zip \
-	vim 
+RUN apt-get update \
+ && apt-get install -y \
+	git supervisor python3 python3-pip python3-dev \
+        cmake wget curl locales vim zip zlib1g-dev \
+        rabbitmq-server \
+ && pip3 install --upgrade pip setuptools
+
 
 # Set the locale
 RUN locale-gen cy_GB.UTF-8
 ENV LANG cy_GB.UTF-8  
 ENV LANGUAGE cy_GB:en  
 ENV LC_ALL cy_GB.UTF-8
+
 
 # Gosod padatious / Install Padartious
 RUN cd /opt && git clone https://github.com/libfann/fann.git FaNN \
@@ -35,11 +26,13 @@ RUN cd /opt && git clone https://github.com/libfann/fann.git FaNN \
   && pip3 install padatious \
   && rm -rf /var/lib/apt/lists/*
 
-# adapt
+
+# Gosod Adapt / Install Adapt
 RUN pip3 install -e git+https://github.com/mycroftai/adapt#egg=adapt-parser
 
-RUN rm -rf /var/lib/apt/lists/*
 
+# estyn data defnyddiol ar gyfer rhai sgiliau / 
+# fetch some useful data for some of the skills.
 RUN mkdir -p /data
 WORKDIR /data
 RUN wget http://techiaith.cymru/enwaulleoedd/EnwauCymru/EnwauCymru.txt
