sgiliau newydd a diweddaru APIs // new skills and update APIs

--- a/server/supervisord/celery.conf
+++ b/server/supervisord/celery.conf
@@ -1,10 +1,9 @@
 [supervisord]
 
 [program:celery]
-command=celery worker -A skills_assistant_tasks --loglevel DEBUG --concurrency=1
+command=celery -A skills_assistant_tasks worker --loglevel DEBUG --concurrency=1
 directory=/opt/skills-server
 autostart=true
 autorestart=true
 stdout_logfile=/var/log/skills-server/celery.worker.log
 stderr_logfile=/var/log/skills-server/celery.worker.error.log
-
