--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,9 +1,12 @@
-FROM ubuntu:18.04
+FROM ubuntu:20.04
 MAINTAINER Uned Technolegau Iaith, Prifysgol Bangor University
 
+ARG DEBIAN_FRONTEND=noninteractive
+ENV TZ=Europe/London
+
 RUN apt-get update \
- && apt-get install -y \
-	git supervisor python3 python3-pip python3-dev \
+ && apt-get install -y -qq \
+	tzdata git supervisor python3 python3-pip python3-dev \
         cmake wget curl locales vim zip zlib1g-dev \
         rabbitmq-server \
  && pip3 install --upgrade pip setuptools
@@ -39,6 +42,7 @@ RUN wget http://techiaith.cymru/enwaulleoedd/EnwauCymru/EnwauCymru.txt
 
 RUN mkdir -p /opt/padatious
 ADD server/requirements.txt /opt/padatious/
+
 WORKDIR /opt/padatious/
 RUN pip3 install -r requirements.txt
 ENV PYTHONPATH="${PYTHONPATH}:/opt/padatious/src"
