--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,13 +1,15 @@
-CherryPy==3.6.0
-gunicorn==19.5.0
-celery==4.2.1
-kombu==4.4.0
-aiohttp==3.7.4
-psutil==5.6.6
-pyowm==2.10.0 
-feedparser==5.2.1 
-jsonpickle==1.1
-python-dateutil==2.8.0 
-PyMySQL==0.9.3
-spotipy==2.4.4
+CherryPy==18.6.1
+gunicorn==20.1.0
+celery==5.2.2
+kombu==5.2.3
+aiohttp==3.8.1
+psutil==5.9.0
+pyowm==3.2.0
+feedparser==6.0.8
+jsonpickle==2.1.0
+python-dateutil==2.8.2
+PyMySQL==1.0.2
+spotipy==2.19.0
 wikipedia==1.4.0
+adapt-parser==1.0.0
+cryptography==36.0.1
